Bug 837091 - Rename cookie-changed notification for private cookies. r=ehsan